# modern_cpp_templates

./: README.md
examples/: a.out  abs_template.cpp
homework_9/: CMakeLists.txt
homework_9/include/: bow_dictionary.hpp  convert_dataset.hpp  histogram.hpp  homework_9.h  kmeans.hpp
homework_9/src/: bow_dictionary.cpp  compute_sifts.cpp  convert_dataset.cpp  histogram.cpp  kmeans.cpp  kmeans_utils.cpp  main.cpp  serialize.cpp
